[package]
name = "rentr"
version = "0.1.2"
authors = ["Roman Schejbal <schejbalroman@gmail.com>"]
edition = "2018"
description = "A utility for running arbitrary commands when files change."
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "5.0.0-pre.13"
structopt = "0.3.20"
